objects/USA_Favorites__c.object
<CustomObject>
    <description>Backend object used for Briefcase
USA BRIEFCASE object</description>
    <fields>
        <fullName>Accounts__c</fullName>
        <label>Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>App_Version__c</fullName>
        <label>App Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Generally the same as the App-Maintained &quot;Owner&quot; field.</inlineHelpText>
        <label>Assigned User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>startsWith</operation>
                <value>USA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Briefcase_iPads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Storage__c</fullName>
        <label>Available Storage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Files__c</fullName>
        <label>Files</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Capacity__c</fullName>
        <label>Storage Capacity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8 GB</fullName>
                </value>
                <value>
                    <fullName>16 GB</fullName>
                </value>
                <value>
                    <fullName>32 GB</fullName>
                </value>
                <value>
                    <fullName>64 GB</fullName>
                </value>
                <value>
                    <fullName>128 GB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Last_Update__c</fullName>
        <inlineHelpText>Indicates the last time the users has successfully updated (synced) their iPad.</inlineHelpText>
        <label>Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Chatter_Group__c</fullName>
        <formula>Owner:User.USA_Chatter_Group_Team_Membership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Chatter Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iOS_Version__c</fullName>
        <label>iOS Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPad_Model__c</fullName>
        <label>iPad Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st Generation</fullName>
                </value>
                <value>
                    <fullName>2nd Generation</fullName>
                </value>
                <value>
                    <fullName>3rd Generation</fullName>
                </value>
                <value>
                    <fullName>Mini 1st Generation</fullName>
                </value>
                <value>
                    <fullName>Mini 2nd Generation</fullName>
                </value>
                <value>
                    <fullName>Air 1st Generation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Briefcase iPad</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Accounts__c</columns>
        <columns>Files__c</columns>
        <columns>USA_Last_Update__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>App_Version__c</columns>
        <columns>iOS_Version__c</columns>
        <columns>iPad_Model__c</columns>
        <columns>Available_Storage__c</columns>
        <columns>Storage_Capacity__c</columns>
        <columns>User_Chatter_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>iPad ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefcase iPads</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_Deleting_Favorites</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISCHANGED(App_Version__c), 
OR(
AND(ISCHANGED(Accounts__c),ISBLANK(Accounts__c)), AND(ISCHANGED(Files__c),ISBLANK(Files__c)))
)</errorConditionFormula>
        <errorMessage>You do not have access to change this field.</errorMessage>
    </validationRules>
</CustomObject>